--- a/app/src/main/res/layout/reg_fragment.xml
+++ b/app/src/main/res/layout/reg_fragment.xml
@@ -2,55 +2,55 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="16dp"
     android:orientation="vertical">
 
-
+    <TextView
+        android:id="@+id/reg_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/reg_logo"
+        android:textSize="46sp"
+        app:layout_constraintBottom_toTopOf="@+id/login_title_reg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/login_title"
+        android:id="@+id/login_title_reg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elegantTextHeight="true"
+        android:filterTouchesWhenObscured="false"
         android:hint="@string/login_title_hint"
         android:importantForAutofill="no"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/password_title"
+        app:layout_constraintBottom_toTopOf="@+id/password_title_reg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/password_title"
+        android:id="@+id/password_title_reg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:elegantTextHeight="true"
         android:hint="@string/password_title_hint"
         android:importantForAutofill="no"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
+        app:layout_constraintBottom_toTopOf="@+id/login_button_reg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@id/login_button_reg"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:hint="@string/login_button"/>
     <Button
         android:id="@+id/login_button_reg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@id/login_button"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:hint="@string/reg_button"/>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
